Dashboard v1.0.0 + Logo aponta pro sistema + Nav compacta
- dashboard.html v1.0.0: KPIs (pedidos, faturamento, ticket médio, bling sync, cancelados),
  status bars, gráfico por hora, produtos, pagamentos, vendedores, entregadores,
  últimos pedidos — auto-refresh 60s, seletor de data
- worker.js v2.22.0: GET /api/dashboard (endpoint dedicado, leve, sem audit logs)
- shared.js v1.9.0: Logo aponta para dashboard.html (capa do sistema)
- index.html: redirect para dashboard.html (era pedido.html)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // Tem sessão ou API key → vai para pedido
       const user = JSON.parse(localStorage.getItem('mg_user') || 'null');
       if (user?.role === 'entregador') window.location.replace('entregador.html');
-      else window.location.replace('pedido.html');
+      else window.location.replace('dashboard.html');
     } else {
       // Sem auth → login
       window.location.replace('login.html');
